--- a/config_example.json
+++ b/config_example.json
@@ -6,7 +6,8 @@
       "type": "rgb",
       "gt": true,
       "path_regex": "^(?P<scene>Scene\\d+)/(?P<variation>[^/]+)/frames/rgb/(?P<camera>Camera_\\d+)/",
-      "basename_regex": "^rgb_(?P<id>\\d+)\\.(?P<ext>jpg|png)$"
+      "basename_regex": "^rgb_(?P<frame>\\d+)\\.(?P<ext>jpg|png)$",
+      "id_regex": "^(?P<id>Scene\\d+/[^/]+/frames/rgb/Camera_\\d+/rgb_\\d+)\\.(?:jpg|png)$"
     },
     {
       "name": "VKITTI2",
@@ -14,14 +15,16 @@
       "type": "depth",
       "gt": true,
       "path_regex": "^(?P<scene>Scene\\d+)/(?P<variation>[^/]+)/frames/depth/(?P<camera>Camera_\\d+)/",
-      "basename_regex": "^depth_(?P<id>\\d+)\\.(?P<ext>png)$"
+      "basename_regex": "^depth_(?P<frame>\\d+)\\.(?P<ext>png)$",
+      "id_regex": "^(?P<id>Scene\\d+/[^/]+/frames/depth/Camera_\\d+/depth_\\d+)\\.png$"
     },
     {
       "name": "VKITTI2",
       "path": "/path/to/predicted_depth",
       "type": "depth",
       "gt": false,
-      "basename_regex": "^(?P<id>\\d+)_pred\\.(?P<ext>png|npy)$"
+      "basename_regex": "^(?P<frame>\\d+)_pred\\.(?P<ext>png|npy)$",
+      "id_regex": "^(?P<id>\\d+)_pred\\.(?:png|npy)$"
     }
   ]
 }
