--- a/config_example.json
+++ b/config_example.json
@@ -7,7 +7,7 @@
       "gt": true,
       "path_regex": "^(?P<scene>Scene\\d+)/(?P<variation>[^/]+)/frames/rgb/(?P<camera>Camera_\\d+)/",
       "basename_regex": "^rgb_(?P<frame>\\d+)\\.(?P<ext>jpg|png)$",
-      "id_regex": "^(?P<id>Scene\\d+/[^/]+/frames/rgb/Camera_\\d+/rgb_\\d+)\\.(?:jpg|png)$"
+      "id_regex": "^(?P<scene>Scene\\d+)/(?P<variation>[^/]+)/frames/rgb/(?P<camera>Camera_\\d+)/rgb_(?P<frame>\\d+)\\.(?:jpg|png)$"
     },
     {
       "name": "VKITTI2",
@@ -16,7 +16,7 @@
       "gt": true,
       "path_regex": "^(?P<scene>Scene\\d+)/(?P<variation>[^/]+)/frames/depth/(?P<camera>Camera_\\d+)/",
       "basename_regex": "^depth_(?P<frame>\\d+)\\.(?P<ext>png)$",
-      "id_regex": "^(?P<id>Scene\\d+/[^/]+/frames/depth/Camera_\\d+/depth_\\d+)\\.png$"
+      "id_regex": "^(?P<scene>Scene\\d+)/(?P<variation>[^/]+)/frames/depth/(?P<camera>Camera_\\d+)/depth_(?P<frame>\\d+)\\.png$"
     },
     {
       "name": "VKITTI2",
@@ -24,7 +24,7 @@
       "type": "depth",
       "gt": false,
       "basename_regex": "^(?P<frame>\\d+)_pred\\.(?P<ext>png|npy)$",
-      "id_regex": "^(?P<id>\\d+)_pred\\.(?:png|npy)$"
+      "id_regex": "^(?P<frame>\\d+)_pred\\.(?:png|npy)$"
     }
   ]
 }
