--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["crawler", "main.py"]
+packages = ["ds_crawler", "main.py"]
