--- a/examples/config.json
+++ b/examples/config.json
@@ -64,6 +64,10 @@
           "used_as": "input",
           "slot": "demo.input.depth",
           "modality_type": "depth"
+        },
+        "meta": {
+          "radial_depth": false,
+          "scale_to_meters": 1.0
         }
       }
     }
