--- a/config_example.json
+++ b/config_example.json
@@ -37,6 +37,10 @@
           "used_as": "target",
           "slot": "demo.target.depth",
           "modality_type": "depth"
+        },
+        "meta": {
+          "radial_depth": false,
+          "scale_to_meters": 1.0
         }
       }
     },
@@ -55,6 +59,10 @@
           "used_as": "input",
           "slot": "demo.input.depth",
           "modality_type": "depth"
+        },
+        "meta": {
+          "radial_depth": false,
+          "scale_to_meters": 1.0
         }
       }
     }
