add mandatory rgb field

--- a/config_example.json
+++ b/config_example.json
@@ -18,6 +18,9 @@
           "slot": "demo.target.rgb",
           "modality_type": "rgb"
         },
+        "meta": {
+          "rgb_range": [0, 255]
+        },
         "specifier": "whatever",
         "some_other_prop": 1234566
       }
