--- a/examples/config.json
+++ b/examples/config.json
@@ -22,7 +22,7 @@
           "modality_type": "rgb"
         },
         "meta": {
-          "rgb_range": [0, 255]
+          "range": [0, 255]
         },
         "dataset": {
           "license": "CC BY-NC-SA 4.0",
@@ -49,7 +49,7 @@
           "modality_type": "rgb"
         },
         "meta": {
-          "rgb_range": [0, 255]
+          "range": [0, 255]
         }
       }
     },
