--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,11 @@ dev = ["pytest", "tqdm"]
 
 [project.scripts]
 ds-crawler = "main:main"
+build-meta-schema = "meta.build_meta_schema:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["ds_crawler", "main.py"]
+packages = ["ds_crawler", "main.py", "meta"]
