fix tests to take in range meta, bump version to first release

--- a/examples/config.json
+++ b/examples/config.json
@@ -73,7 +73,8 @@
         },
         "meta": {
           "radial_depth": false,
-          "scale_to_meters": 1.0
+          "scale_to_meters": 1.0,
+          "range": [0, 65535]
         }
       }
     }
